@@ -4,3 +4,4 @@ text_editor = default
 paper = letter
 ads_token = None
 ads_display = 20
+
